Fixed emoticon layout issues in IE6
git-svn-id: https://emite.googlecode.com/svn/trunk/hablar@1428 87f8d446-a148-0410-9e96-a52f46714620

--- a/war/ie6.css
+++ b/war/ie6.css
@@ -11,3 +11,14 @@
 .nogwt-TabLayoutPanelTab {
 	width: 140px;
 }
+
+.hablar-Emoticon {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	padding: 0 !important;
+}
+
+.hablar-Emoticon span {
+	display: none;
+}
